--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
         <string name="round_up_tip">Round up tip?</string>
         <string name="calculate">Calculate</string>
         <string name="tip_amount">Tip Amount: %s</string>
+    <string name="service_image">service image</string>
 
 </resources>
 
